# snark-benchmarks

./: README.md
bellman_mimc/: Cargo.toml
bellman_mimc/src/: main.rs
bellman_sha256/: Cargo.toml
bellman_sha256/src/: main.rs
