[package]
name = "bellman-sha256-benchmarks"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
num-traits = "0.2.6"
num-bigint = "0.2.2"
rand = "0.4.0"
log = "0.4.6"
byteorder = "1.3.1"
bellman_ce = { version = "0.3.0", default-features = false }
sapling_crypto_ce = { package = "sapling-crypto_ce", git = "https://github.com/matter-labs/sapling-crypto", branch = "master" }
rust-crypto = "0.2.36"
base64 = "0.10.1"

[dependencies.ff_ce]
version = "0.7.1"
features = ["derive"]

